# dioxus-tailwind

./: .gitignore  CONVENTIONS.md  Cargo.toml  Dioxus.toml  README.md  input.css  package-lock.json  package.json
assets/: tailwind.css
src/: main.rs
src/server/: mod.rs  time.rs
src/view/: home.rs  mod.rs
src/view/conf/: loading.rs  mod.rs  nav.rs  route.rs
src/view/top/: local.rs  mod.rs  ping.rs  top1.rs  top2.rs  top3.rs
