[package]
name = "dioxus-tailwind"
version = "0.1.0"
authors = ["jiale zhou <z429213642@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.41"
dioxus = { version = "0.6.3", features = ["router", "fullstack"] }
futures = "0.3.31"
surge-ping = "0.8.2"
sysinfo = "0.36.1"
tokio = { version = "1.47.0", features = ["time"] }

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
# mobile = ["dioxus/mobile"]
server = ["dioxus/server"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
